Web ver 1.5 layout remade

--- a/CAPSTONE_TEAM01_2024/Views/Categories/ClassList.cshtml
+++ b/CAPSTONE_TEAM01_2024/Views/Categories/ClassList.cshtml
@@ -1,462 +1,4 @@
 ﻿@{
 	ViewData["Title"] = "Class List";
 }
-@if (TempData["MessageAddClass"] != null)
-{
-	<div class="alert alert-@TempData["MessageAddClassType"]">
-		@TempData["MessageAddClass"]
-	</div>
-}
-@if (TempData["MessageEditClass"] != null)
-{
-	<div class="alert alert-@TempData["MessageEditClassType"]">
-		@TempData["MessageEditClass"]
-	</div>
-}
-@if (TempData["MessageDeleteClass"] != null)
-{
-	<div class="alert alert-@TempData["MessageDeleteClassType"]">
-		@TempData["MessageDeleteClass"]
-	</div>
-}
-@if (TempData["MessageImportClass"] != null)
-{
-	<div class="alert alert-@TempData["MessageImportClassType"]">
-		@TempData["MessageImportClass"]
-	</div>
-}
-@using CAPSTONE_TEAM01_2024.Utilities
-@model CAPSTONE_TEAM01_2024.ViewModels.ClassListViewModel
-<div class="content-wrapper" style="min-height: 912.2px;">
-	<!-- Content Header (Page header) -->
-	<header class="content-header">
-		<div class="container-fluid">
-			<div class="row mb-2">
-				<div class="col-sm-6">
-					<h1 class="m-0">Danh Sách Lớp</h1>
-				</div><!-- /.col -->
-			</div><!-- /.row -->
-		</div><!-- /.container-fluid -->
-	</header>
-
-	<!-- /.content-header -->
-	<!-- Main content -->
-	<main class="content">
-		<div class="container-fluid">
-			<div class="card">
-				<div class="card-header">
-					<div class="row text-center">
-						<div class="col-auto">
-							<button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#AddClassModal">
-								<i class="bi bi-plus custom-icon"></i> Thêm Lớp
-							</button>
-							<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#ImportExcelModal">
-								<i class="bi bi-upload"></i> Nhập File
-							</button>
-							<a type="button" class="btn btn-secondary" asp-controller="Categories" asp-action="ExportClassToExcel">
-								<i class="bi bi-download"></i> Xuất File
-							</a>
-						</div>
-						<div class="col">
-							<nav class="navbar navbar-light bg-light">
-								<form class="d-flex ms-auto">
-									<input class="form-control me-2" type="search" id="searchInput" placeholder="Nhập nội dung cần tìm" aria-label="Search">
-								</form>
-							</nav>
-						</div>
-					</div>
-				</div>
-				<!-- /.card-header -->
-
-				<div class="card-body">
-					<table class="table table-striped">
-						<thead>
-							<tr class="text-center">
-								<th scope="col">#</th>
-								<th scope="col">Mã Lớp</th>
-								<th scope="col">Cố Vấn Học Tập</th>
-								<th scope="col">Niên Khóa</th>
-								<th scope="col">Ngành</th>
-								<th scope="col">Số lượng SV</th>
-								<th scope="col">Thao Tác</th>
-							</tr>
-						</thead>
-						<tbody id="classTable">
-							@{
-								int number = (Model.PaginatedClasses.PageIndex - 1) * Model.PaginatedClasses.PageSize;
-							}
-							@foreach (var PClass in Model.PaginatedClasses)
-							{
-								<tr class="table-row" onclick="rowClickHandler(event, '@Url.Action("StudentList", new { id = PClass.Id })');" style="cursor: pointer; transition: background-color 0.3s;" onmouseover="this.style.backgroundColor='#f1f1f1';" onmouseout="this.style.backgroundColor='';">
-									<td scope="row" class="text-center">@PClass.Id</td>
-									<td class="text-center">@PClass.ClassName</td>
-									<td class="text-center">@PClass.AdvisorName</td>
-									<td class="text-center">@PClass.YearName</td>
-									<td class="text-center">@PClass.Department</td>
-									<td class="text-center">@PClass.StudentCount</td>
-									<td class="text-center">
-										<button type="button" class="btn btn-outline-primary btn-sm"
-												onclick="event.stopPropagation();"
-												data-bs-toggle="modal"
-												data-bs-target="#EditClassModal"
-												data-class-id="@PClass.Id"
-												data-class-name="@PClass.ClassName"
-												data-advisor-id="@PClass.AdvisorId"
-												data-advisor-name="@PClass.AdvisorName"
-												data-year-name="@PClass.YearName"
-												data-department="@PClass.Department"
-												data-student-count="@PClass.StudentCount"
-												aria-label="edit class details">
-											<i class="fa-solid fa-pen-to-square custom-icon"></i> Cập nhật
-										</button>
-										<button type="button" class="btn btn-outline-danger btn-sm"
-												onclick="event.stopPropagation();"
-												data-bs-toggle="modal"
-												data-bs-target="#DeleteClassModal"
-												data-class-id="@PClass.Id"
-												aria-label="delete class">
-											<i class="fa-solid fa-trash custom-icon"></i> Xóa
-										</button>
-									</td>
-								</tr>
-							}
-							<tr id="noresults" style="display: none;">
-								<td colspan="7" class="text-center">Không tìm thấy nội dung</td>
-							</tr>
-						</tbody>
-
-					</table>
-					<nav aria-label="Page navigation" style=" float:right;">
-						<ul class="pagination">
-							@if (Model.PaginatedClasses.HasPreviousPage)
-							{
-								<li class="page-item">
-									<a class="page-link" asp-action="ClassList" asp-route-pageNumber="@(Model.PaginatedClasses.PageIndex - 1)">Trang Trước</a>
-								</li>
-							}
-							else
-							{
-								<li class="page-item disabled">
-									<span class="page-link">Trang Trước</span>
-								</li>
-							}
-
-							@for (int i = 1; i <= Model.PaginatedClasses.TotalPages; i++)
-							{
-								if (i == Model.PaginatedClasses.PageIndex)
-								{
-									<li class="page-item active">
-										<span class="page-link">@i</span>
-									</li>
-								}
-								else
-								{
-									<li class="page-item">
-										<a class="page-link" asp-action="ClassList" asp-route-pageNumber="@i">@i</a>
-									</li>
-								}
-							}
-
-							@if (Model.PaginatedClasses.HasNextPage)
-							{
-								<li class="page-item">
-									<a class="page-link" asp-action="ClassList" asp-route-pageNumber="@(Model.PaginatedClasses.PageIndex + 1)">Trang Sau</a>
-								</li>
-							}
-							else
-							{
-								<li class="page-item disabled">
-									<span class="page-link">Trang Sau</span>
-								</li>
-							}
-						</ul>
-					</nav>
-				</div>
-				<!-- /.card-body -->
-			</div>
-		</div>
-	</main>
-	<!-- /.content -->
-</div>
-
-<!-- Add Modal -->
-<div class="modal fade" id="AddClassModal" tabindex="-1" data-bs-backdrop="false" aria-labelledby="AddClassModalLabel" aria-hidden="true">
-	<div class="modal-dialog">
-		<div class="modal-content">
-			<div class="modal-header">
-				<h5 class="modal-title" id="AddClassModalLabel">Thêm Lớp</h5>
-				<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-			</div>
-			<div class="modal-body">
-				<form id="addClassForm" asp-action="AddClass" method="post">
-					<div class="mb-3">
-						<label class="form-label">Mã Lớp</label>
-						<input type="text" class="form-control" id="className" name="className" required>
-					</div>
-					<div class="mb-3">
-						<label for="classAdvisor" class="form-label">Cố Vấn Học Tập</label>
-						<select asp-for="Class.AdvisorId" class="form-select" id="advisorSelect" required>
-							<option value="" disabled selected>Vui lòng chọn cố vấn phù hợp</option>
-							@foreach (var advisor in Model.Advisors)
-							{
-								<option value="@advisor.Value" data-advisor-name="@advisor.Text">@advisor.Text</option>
-							}
-						</select>
-						<span asp-validation-for="Class.AdvisorId" class="text-danger"></span>
-					</div>
-					<input type="hidden" id="advisorId" name="advisorId" />
-					<input type="hidden" id="advisorName" name="advisor" />
-					<div class="mb-3">
-						<label for="classPeriod" class="form-label">Niên Khóa</label>
-						<input type="text" class="form-control" id="yearName" name="yearName" required>
-					</div>
-					<div class="mb-3">
-						<label for="department" class="form-label">Ngành</label>	
-						<select class="form-select" id="department" name="department" required>
-							<option value="" disabled selected>Vui lòng chọn ngành</option>
-							<option value="7480201 - Công nghệ Thông tin (CTTC)">7480201 - Công nghệ Thông tin (CTTC)</option>
-							<option value="7480201 - Công nghệ Thông tin (CTĐB)">7480201 - Công nghệ Thông tin (CTĐB)</option>
-							<option value="7480104 - Hệ thống Thông tin (CTTC)">7480104 - Hệ thống Thông tin (CTTC)</option>
-							<option value="7480102 - Mạng máy tính và truyền thông dữ liệu (CTTC)">7480102 - Mạng máy tính và truyền thông dữ liệu (CTTC)</option>
-						</select>
-					</div>
-					<div class="mb-3">
-						<label class="form-label">Số Lượng SV</label>
-						<input type="number" class="form-control" id="studentCount" name="studentCount" required min="1" max="30">
-					</div>
-					<div class="modal-footer">
-						<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Đóng</button>
-						<button type="submit" class="btn btn-primary">Thêm</button>
-					</div>
-				</form>
-			</div>
-		</div>
-	</div>
-</div>
-
-<!-- Edit Modal -->
-<div class="modal fade" id="EditClassModal" tabindex="-1" data-bs-backdrop="false" aria-labelledby="EditClassModalLabel" aria-hidden="true">
-	<div class="modal-dialog">
-		<div class="modal-content">
-			<div class="modal-header">
-				<h5 class="modal-title" id="EditClassModalLabel">Chỉnh Sửa Lớp</h5>
-				<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-			</div>
-			<div class="modal-body">
-				<form id="editClassForm" asp-action="EditClass" method="post">
-					<input type="hidden" id="editClassId" name="classId" />
-					<div class="mb-3">
-						<label class="form-label">Mã Lớp</label>
-						<input type="text" class="form-control" id="editClassName" name="className" required>
-					</div>
-					<div class="mb-3">
-						<label for="editClassAdvisor" class="form-label">Cố Vấn Học Tập</label>
-						<select asp-for="Class.AdvisorId" class="form-select" id="editAdvisorSelect" required>
-							<option value="" disabled selected>Vui lòng chọn cố vấn phù hợp</option>
-							@foreach (var advisor in Model.Advisors)
-							{
-								<option value="@advisor.Value" data-advisor-name="@advisor.Text">@advisor.Text</option>
-							}
-						</select>
-						<span asp-validation-for="Class.AdvisorId" class="text-danger"></span>
-					</div>
-					<input type="hidden" id="editAdvisorId" name="advisorId" />
-					<input type="hidden" id="editAdvisorName" name="advisor" />
-					<div class="mb-3">
-						<label for="editYearName" class="form-label">Niên Khóa</label>
-						<input type="text" class="form-control" id="editYearName" name="yearName" required>
-					</div>
-					<div class="mb-3">
-						<label for="editDepartment" class="form-label">Ngành</label>
-						<select class="form-select" id="editDepartment" name="department" required>
-							<option value="" disabled selected>Vui lòng chọn ngành</option>
-							<option value="7480201 - Công nghệ Thông tin (CTTC)">7480201 - Công nghệ Thông tin (CTTC)</option>
-							<option value="7480201 - Công nghệ Thông tin (CTĐB)">7480201 - Công nghệ Thông tin (CTĐB)</option>
-							<option value="7480104 - Hệ thống Thông tin (CTTC)">7480104 - Hệ thống Thông tin (CTTC)</option>
-							<option value="7480102 - Mạng máy tính và truyền thông dữ liệu (CTTC)">7480102 - Mạng máy tính và truyền thông dữ liệu (CTTC)</option>
-						</select>
-					</div>
-					<div class="mb-3">
-						<label class="form-label">Số Lượng SV</label>
-						<input type="number" class="form-control" id="editStudentCount" name="studentCount" required min="1" max="30">
-					</div>
-					<div class="modal-footer">
-						<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Đóng</button>
-						<button type="submit" class="btn btn-primary">Lưu Thay Đổi</button>
-					</div>
-				</form>
-			</div>
-		</div>
-	</div>
-</div>
-
-<!-- Delete Modal -->
-<div class="modal fade" id="DeleteClassModal" data-bs-backdrop="false" tabindex="-1" aria-labelledby="DeleteModalLabel" aria-hidden="true">
-	<div class="modal-dialog">
-		<div class="modal-content">
-			<div class="modal-header">
-				<h5 class="modal-title" id="DeleteModalLabel">Xóa Lớp</h5>
-				<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-			</div>
-			<form asp-action="DeleteClass" method="post">
-				<div class="modal-body">
-					<input type="hidden" name="classId" />
-					<p>Bạn có chắc chắn muốn xóa lớp này không?</p>
-				</div>
-				<div class="modal-footer">
-					<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Hủy</button>
-					<button type="submit" class="btn btn-danger">Xóa</button>
-				</div>
-			</form>
-		</div>
-	</div>
-</div>
-
-<!-- Import Modal -->
-<div class="modal fade" id="ImportExcelModal" tabindex="-1" data-bs-backdrop="false" aria-labelledby="ImportExcelModalLabel" aria-hidden="true">
-	<div class="modal-dialog">
-		<div class="modal-content">
-			<div class="modal-header">
-				<h5 class="modal-title" id="ImportExcelModalLabel">Nhập File Excel</h5>
-				<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-			</div>
-			<div class="modal-body">
-				<div class="mb-3">
-					<label for="excelTemplateFile" class="form-label fw-bold"> Tải file Excel mẫu</label>
-					<div id="excelTemplateFile" style="position: relative; display: inline-block; width: 100%; height: calc(1.5em + .75rem + 2px); margin-bottom: 0px;">
-						<a class="btn btn-warning text-dark" asp-controller="Categories" asp-action="DownloadClassTemplate">
-							<i class="bi bi-download"></i> Tải file mẫu
-						</a>
-					</div>
-				</div>
-				<form id="importExcelForm" asp-action="ImportFromExcel" method="post" enctype="multipart/form-data">
-					<div class="mb-3">
-						<label for="excelFile" class="form-label fw-bold"> Chọn file Excel để nhập</label>
-						<div class="custom-file" style="position: relative; display: inline-block; width: 100%; height: calc(1.5em + .75rem + 2px); margin-bottom: 0;">
-							<input type="file" class="custom-file-input" id="excelFile" name="file" accept=".xlsx,.xls" required style="position: absolute; width: 100%; height: 100%; margin: 0; opacity: 0;">
-							<label class="custom-file-label" for="excelFile" style="position: absolute; top: 0; right: 0; left: 0; z-index: 1; height: calc(1.5em + .75rem + 2px); padding: .375rem .75rem; font-weight: 400; line-height: 1.5; color: #495057; background-color: #fff; border: 1px solid #ced4da; border-radius: .25rem; cursor: pointer;">
-								Chọn file <i class="bi bi-upload" style="float:right;"></i>
-							</label>
-						</div>
-					</div>
-					<div class="modal-footer">
-						<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Đóng</button>
-						<button type="submit" class="btn btn-primary"> Nhập</button>
-					</div>
-				</form>
-			</div>
-		</div>
-	</div>
-</div>
-
-<script>
-//Clickable row utilitiy
-	function rowClickHandler(event, url) {
-		// Check if the event is from a button click
-		if (event.target.tagName.toLowerCase() !== 'button' &&
-			event.target.tagName.toLowerCase() !== 'i') {
-			window.location.href = url;
-		}
-	}
-//Add Modal JS
-	document.getElementById('advisorSelect').addEventListener('change', function () {
-		var selectedOption = this.options[this.selectedIndex];
-		var advisorId = selectedOption.value;
-		var advisorName = selectedOption.getAttribute('data-advisor-name');
-
-		// Set the values to hidden fields or directly to the form
-		document.getElementById('advisorId').value = advisorId;
-		document.getElementById('advisorName').value = advisorName;
-	});
-//Edit Modal JS
-	document.addEventListener('DOMContentLoaded', function () {
-		var editClassModal = document.getElementById('EditClassModal');
-		if (editClassModal) {
-			editClassModal.addEventListener('show.bs.modal', function (event) {
-				var button = event.relatedTarget; // Button that triggered the modal
-				if (button) {
-					var classId = button.getAttribute('data-class-id');
-					var className = button.getAttribute('data-class-name');
-					var advisorId = button.getAttribute('data-advisor-id');
-					var advisorName = button.getAttribute('data-advisor-name');
-					var yearName = button.getAttribute('data-year-name');
-					var department = button.getAttribute('data-department');
-					var studentCount = button.getAttribute('data-student-count');
-
-					// Populate the modal fields
-					document.getElementById('editClassId').value = classId;
-					document.getElementById('editClassName').value = className;
-					document.getElementById('editAdvisorSelect').value = advisorId;
-					document.getElementById('editAdvisorId').value = advisorId;
-					document.getElementById('editAdvisorName').value = advisorName;
-					document.getElementById('editYearName').value = yearName;
-					document.getElementById('editDepartment').value = department;
-					document.getElementById('editStudentCount').value = studentCount;
-				}
-			});
-
-			document.getElementById('editAdvisorSelect').addEventListener('change', function () {
-				var selectedOption = this.options[this.selectedIndex];
-				var advisorId = selectedOption.value;
-				var advisorName = selectedOption.getAttribute('data-advisor-name');
-				document.getElementById('editAdvisorId').value = advisorId;
-				document.getElementById('editAdvisorName').value = advisorName;
-			});
-		}
-	});
-//Delete Modal JS
-	 document.addEventListener('DOMContentLoaded', function() {
-		var deleteClassModal = document.getElementById('DeleteClassModal');
-		deleteClassModal.addEventListener('show.bs.modal', function(event) {
-			var button = event.relatedTarget; // Button that triggered the modal
-			var classId = button.getAttribute('data-class-id');
-		
-			// Populate the hidden input field with the class ID
-			var inputClassId = deleteClassModal.querySelector('input[name="classId"]');
-			inputClassId.value = classId;
-		});
-	});
-//Search function JS
-	document.addEventListener('DOMContentLoaded', function() {
-			var searchInput = document.getElementById('searchInput');
-			searchInput.addEventListener('keyup', function() {
-				var filter = searchInput.value.toUpperCase();
-				var table = document.getElementById('classTable');
-				var tr = table.getElementsByTagName('tr');
-				var noResults = document.getElementById('noresults');
-				var found = false;
-
-				for (var i = 0; i < tr.length; i++) {
-					var td = tr[i].getElementsByTagName('td');
-					if (td.length > 0) {
-						var match = false;
-						for (var j = 0; j < td.length; j++) {
-							if (td[j].textContent.toUpperCase().indexOf(filter) > -1) {
-								match = true;
-								break;
-							}
-						}
-						if (match) {
-							tr[i].style.display = '';
-							found = true;
-						} else {
-							tr[i].style.display = 'none';
-						}
-					}
-				}
-
-				// Show or hide the "no results" row
-				if (found) {
-					noResults.style.display = 'none';
-				} else {
-					noResults.style.display = '';
-				}
-			});
-		});
-//Import modal JS
-	document.querySelector('.custom-file-input').addEventListener('change', function (e) {
-		var fileName = document.getElementById("excelFile").files[0].name;
-		var nextSibling = e.target.nextElementSibling;
-		nextSibling.innerText = fileName;
-	});
-</script>
+Class List here
