--- a/CAPSTONE_TEAM01_2024/Views/_ViewStart.cshtml
+++ b/CAPSTONE_TEAM01_2024/Views/_ViewStart.cshtml
@@ -14,6 +14,8 @@
         case "ShowStatistics":
         case "ClassList":
         case "StudentList":
+        case "AdvisorProfiles":
+        case "StudentProfiles":
             Layout = "_PrototypeLayout";
             break;
     }
