--- a/CAPSTONE_TEAM01_2024/Views/Shared/_PrototypeLayout.cshtml.css
+++ b/CAPSTONE_TEAM01_2024/Views/Shared/_PrototypeLayout.cshtml.css
@@ -17,20 +17,25 @@
 
 .dropdown-menu {
     min-width: 200px;
-    background-color: rgb(171 176 194 / 58%); /* Giống màu nền của sidebar */
+    background-color: rgb(171 176 194 / 58%);
     border: none;
     z-index: 1000;
+    position: static;
+    display: block;
+    width: 100%;
+    padding-left: 0; /* No extra padding for alignment */
 }
 
     .dropdown-menu .dropdown-item {
         color: #fff;
         background-color: transparent;
-        font-weight: bold;
+        font-weight: normal; /* Lighter font weight */
+        padding-left: 20px; /* Indent dropdown items */
     }
 
         .dropdown-menu .dropdown-item.active,
         .dropdown-menu .dropdown-item:hover {
-            background-color: rgba(220, 53, 69, 0.8); /* Màu nền khi hover hoặc active */
+            background-color: rgba(220, 53, 69, 0.8);
             color: #fff;
         }
 
@@ -86,9 +91,10 @@
     padding: 10px;
 }
 
-.btn-logout:hover {
-    background-color: #e3e3e3b3;
-}
+    .btn-logout:hover {
+        background-color: #e3e3e3b3;
+    }
+
 #Main_Footer {
     height: inherit !important;
     padding-top: 0.5rem !important;
@@ -96,6 +102,7 @@
     padding-right: 3rem !important;
     background-color: #d72235 !important;
 }
+
 .hidden {
     display: none;
 }
